[gd_scene load_steps=2 format=3 uid="uid://ui_dialogue_box"]

[ext_resource type="Script" path="res://scenes/ui/dialogue_box.gd" id="1_dialogue"]

[node name="DialogueBox" type="Control"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_dialogue")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 100.0
offset_top = 10.0
offset_right = -100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2

[node name="SpeakerLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.9, 0.5, 1)
theme_override_font_sizes/font_size = 22
text = "Speaker Name"

[node name="TextLabel" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Dialogue text goes here. This can be multiple lines and will wrap automatically."
autowrap_mode = 2

[node name="ContinueHint" type="Label" parent="Panel/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.6, 0.6, 0.6, 1)
theme_override_font_sizes/font_size = 14
text = "Press [E] or click to continue..."
horizontal_alignment = 2
